--- a/templates/delete_entry.html
+++ b/templates/delete_entry.html
@@ -4,11 +4,11 @@
   <h1>Delete Entry</h1>
   <form method="post" action="">
     <input type="radio" id="student" name="deleteID" value="Student">
-    <label for="student">Student</label><br>
+    <label for="student">Student</label>
     <input type="radio" id="professor" name="deleteID" value="professor">
-    <label for="professor">Professor</label><br>
+    <label for="professor">Professor</label><br />
     <label for="InputID">ID to be Deleted</label>
-    <input type="number" id="InputID">
+    <input type="number" id="InputID"><br />
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock %}
