--- a/templates/professor_add.html
+++ b/templates/professor_add.html
@@ -10,8 +10,7 @@
     <label for="InputDept">Department</label>
     <input type="text" id="InputDept"><br />
     <label for="InputJoin">Join Date</label>
-    <input type="date" id="InputJoin"><br /><br />
-
+    <input type="date" id="InputJoin"><br />
     <!-- <div class="form-group">
       <label for="InputEmail1">Email address</label>
       <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
