--- a/templates/student_add.html
+++ b/templates/student_add.html
@@ -12,8 +12,7 @@
     <label for="InputDept">Department</label>
     <input type="text" id="InputDept"><br />
     <label for="InputEnroll">Enrollment Date</label>
-    <input type="date" id="InputEnroll"><br /><br />
-
+    <input type="date" id="InputEnroll"><br />
     <!-- <div class="form-group">
       <label for="InputEmail1">Email address</label>
       <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
