Started work on connecting to Cloud SQL Server

--- a/templates/deleteEntry.html
+++ b/templates/deleteEntry.html
@@ -3,9 +3,9 @@
 {% block content %}
   <h1>Delete Entry</h1>
   <form method="post" action="">
-    <input type="radio" id="student" name="deleteID" value="Student">
+    <input type="radio" id="student" name="deleteStudent" value="Student">
     <label for="student">Student</label>
-    <input type="radio" id="professor" name="deleteID" value="professor">
+    <input type="radio" id="professor" name="deleteStudent" value="professor">
     <label for="professor">Professor</label><br />
     <label for="InputID">ID to be Deleted</label>
     <input type="number" id="InputID"><br />
