--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -2,17 +2,17 @@
 {% block title %}Add Student{% endblock %}
 {% block content %}
   <h1>Add Student</h1>
-  <form method="post" action="">
+  <form method="POST" action="">
     <label for="InputID">Student ID</label>
-    <input type="number" id="InputID"><br />
+    <input type="number" name="id" ><br />
     <label for="InputName">Name</label>
-    <input type="text" id="InputName"><br />
+    <input type="text" name="name"><br />
     <label for="InputDOB">Date of Birth</label>
-    <input type="date" id="InputDOB"><br />
-    <label for="InputDept">Department</label>
-    <input type="text" id="InputDept"><br />
+    <input type="date" name="birthdate"><br />
+    <label for="InputDept">Major</label>
+    <input type="text" name="major"><br />
     <label for="InputEnroll">Enrollment Date</label>
-    <input type="date" id="InputEnroll"><br />
+    <input type="date" name="enrolldate"><br />
     <!-- <div class="form-group">
       <label for="InputEmail1">Email address</label>
       <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
