--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,6 @@
         <a href="{{url_for('addStudent')}}" class=btn btn-default ">Add Student</a>
         <a href="{{url_for('addProfessor')}}" class=btn btn-info">Add Professor</a>
         <a href="{{url_for('deleteEntry')}}" class=btn btn-info">Delete Entry</a>
+        <a href="{{url_for('viewStudent')}}" class=btn btn-info">View Student</a>
     </form>
 {% endblock %}
