--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,9 @@
         <a href="{{url_for('addProfessor')}}" class=btn btn-info">Add Professor</a>
         <a href="{{url_for('deleteEntry')}}" class=btn btn-info">Delete Entry</a>
         <a href="{{url_for('viewStudent')}}" class=btn btn-info">View Student</a>
+        
+        <a href="{{url_for('addCourse')}}" class=btn btn-info">Add Course</a>
+        <a href="{{url_for('editCourse')}}" class=btn btn-info">Edit Course</a>
+        <a href="{{url_for('viewCourses')}}" class=btn btn-info">View Courses</a>
     </form>
 {% endblock %}
