--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,8 @@
         <a href="{{url_for('addCourse')}}" class=btn btn-info">Add Course</a>
         <a href="{{url_for('editCourse')}}" class=btn btn-info">Edit Course</a>
         <a href="{{url_for('viewCourses')}}" class=btn btn-info">View Courses</a>
+                                                                
+        <a href="{{url_for('viewStudentSchedule')}}" class=btn btn-info">View Student Schedule</a>
+		<a href="{{url_for('viewCourseReview')}}" class=btn btn-info">View Course Review</a>
     </form>
 {% endblock %}
