--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -3,16 +3,12 @@
 {% block content %}
   <h1>Edit Course</h1>
   <form method="POST" action="">
-    <label for="InputID">Student ID</label>
+    <label for="InputID">Enter Course ID to Edit</label>
     <input type="number" name="id" ><br />
-    <label for="InputName">Name</label>
-    <input type="text" name="name"><br />
-    <label for="InputDOB">Date of Birth</label>
-    <input type="date" name="birthdate"><br />
-    <label for="InputDept">Major</label>
-    <input type="text" name="major"><br />
-    <label for="InputEnroll">Enrollment Date</label>
-    <input type="date" name="enrolldate"><br />
+    <label for="InputName">New Course Name</label>
+    <input type="text" name="coursename"><br />
+    <label for="InputDOB">New Course Department</label>
+    <input type="text" name="department"><br />
     <!-- <div class="form-group">
       <label for="InputEmail1">Email address</label>
       <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
