start to view courses

--- a/templates/viewCourses.html
+++ b/templates/viewCourses.html
@@ -3,7 +3,10 @@
 {% block content %}
   <h1>View Courses</h1>
   <form method="post" action="">
-    <label for="InputID">Student ID</label>
+    <p>Sort By:</p>
+    <label for="InputID">Department</label>
+    <input type="text" name="id" ><br />
+    <label for="InputID">Course Name</label>
     <input type="text" name="id" ><br />
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
