--- a/templates/viewCourses.html
+++ b/templates/viewCourses.html
@@ -3,11 +3,19 @@
 {% block content %}
   <h1>View Courses</h1>
   <form method="post" action="">
+    <input type="checkbox" id="alphabet" name="alphabet" value="checkedSort">
+    <label for="alphabet">Alphabetical Order</label><br>
+    
+    <p>Must pick between Group By or Sort By...</p>
+    <p>Group By:</p>
+    <input type="checkbox" id="groupdept" name="groupdept" value="checkedGroup">
+    <label for="groupdept">Sum of ID numbers grouped by department</label><br>
+
     <p>Sort By:</p>
-    <label for="InputID">Department</label>
-    <input type="text" name="id" ><br />
-    <label for="InputID">Course Name</label>
-    <input type="text" name="id" ><br />
+    <label for="department">Department</label>
+    <input type="text" name="department" ><br />
+    <label for="coursename">Course Name</label>
+    <input type="text" name="coursename" ><br />
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock %}
