Moved tables into Tables.py, added framework for viewStudentSchedule, debugging needed for querying new tables

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,6 @@
         <a href="{{url_for('viewCourses')}}" class=btn btn-info">View Courses</a>
                                                                 
         <a href="{{url_for('viewStudentSchedule')}}" class=btn btn-info">View Student Schedule</a>
-		<a href="{{url_for('viewCourseReviews')}}" class=btn btn-info">View Course Review</a>
+		<a href="{{url_for('viewCourseReviews')}}" class=btn btn-info">View Course Reviews</a>
     </form>
 {% endblock %}
