Added base functionality for editStudentSchedule

--- a/templates/editStudentSchedule.html
+++ b/templates/editStudentSchedule.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Edit Student Schedule{% endblock %}
 {% block content %}
-  <h1>Delete Entry</h1>
+  <h1>Edit Student Schedule</h1>
   <form method="post" action="">
 	<div>
 		<input type="radio" id="add" name="options" value="Add" checked>
