--- a/templates/addCourse.html
+++ b/templates/addCourse.html
@@ -5,10 +5,14 @@
   <form method="POST" action="">
     <label for="InputID">Course ID</label>
     <input type="number" name="id" ><br />
-    <label for="InputName">Department</label>
+    <label for="InputDept">Department</label>
     <input type="text" name="department"><br />
-    <label for="InputDOB">Course Name</label>
+    <label for="InputCourseName">Course Name</label>
     <input type="text" name="coursename"><br />
+    <label for="InputDayOfWeek">Day of Week</label>
+    <input type="text" name="dayOfWeek"><br />
+    <label for="InputProfID">Professor ID</label>
+    <input type="text" name="profID"><br />
     <!-- <div class="form-group">
       <label for="InputEmail1">Email address</label>
       <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
