add, edit, view professors

--- a/templates/deleteEntry.html
+++ b/templates/deleteEntry.html
@@ -1,3 +1,5 @@
+<!-- TODO ANGGA -->
+<!-- This deletes either professor or student from the table. -->
 {% extends "base.html" %}
 {% block title %}Delete Entry{% endblock %}
 {% block content %}
