--- a/templates/editProfessor.html
+++ b/templates/editProfessor.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Add Professor{% endblock %}
+{% block title %}Edit Professor{% endblock %}
 {% block content %}
-  <h1>Add Professor</h1>
+  <h1>Edit Professor</h1>
   <form method="post" action="">
     <label for="InputID">Professor ID</label>
     <input type="number" name="id"><br />
