Added to student views

--- a/templates/viewStudent.html
+++ b/templates/viewStudent.html
@@ -4,7 +4,12 @@
   <h1>View Student</h1>
   <form method="post" action="">
     <label for="InputID">Student ID</label>
-    <input type="text" name="id" ><br />
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <input type="text" name="id" >
+    <button type="submit" name="student_check" class="btn btn-primary">Find Student</button>
+  </form>
+  <p></p>
+  <p></p>
+  <form method="post" action="">
+    <button type="submit" name="major_check" class="btn btn-primary">Number of Students in Majors</button>
   </form>
 {% endblock %}
