--- a/templates/index.html
+++ b/templates/index.html
@@ -19,5 +19,7 @@
         <br /><br />
         <a href="{{url_for('addCourseReview')}}" class=btn btn-info>Add Course Review</a><br />
 		<a href="{{url_for('viewCourseReviews')}}" class=btn btn-info>View Course Reviews</a><br />
+        <br /><br />
+        <a href="{{url_for('deleteEntry')}}" class=btn btn-info>Delete Entry</a><br />
     </form>
 {% endblock %}
